styles/media-query.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

/* Below 1440px (Smaller Desktops */
@media only screen and (max-width: 90em) {
}

/* Below 1200px (Landscape Tablets) */

@media only screen and (max-width: 75em) {
    html {
        font-size: 56.25%; /* 9px */
    }

    .row {
        padding: 0 var(--spacing-11);
    }

    /* ---------- TrustedBy Section ---------- */

    .trustedby-section__logos {
        -webkit-box-pack: center;
        -ms-flex-pack: center;
        justify-content: center;
        column-gap: var(--spacing-10);
        row-gap: var(--spacing-10);
    }
}

/* Below 900px (Tablets) */

@media only screen and (max-width: 56.25em) {
    html {
        font-size: 50%; /* 8px */
    }

    /* ---------- Advantages Section ---------- */

    .row.advantages-section__content {
        padding-right: var(--spacing-11);
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -ms-flex-direction: column;
        flex-direction: column;
        row-gap: var(--spacing-12);
    }

    /* ---------- Package Section ---------- */

    .row.package-section__content {
        -webkit-box-orient: vertical;
        -webkit-box-direction: reverse;
        -ms-flex-direction: column-reverse;
        flex-direction: column;
        row-gap: var(--spacing-12);
    }

    /* ---------- Footer---------- */

    .footer__content {
        row-gap: var(--spacing-7);
    }

    .company__brand {
        -webkit-box-flex: 100%;
        -ms-flex: 100%;
        flex: 100%;
    }

    /* */
    .cta-section .row {
        row-gap: var(--spacing-7);
    }
}

/* Below 768px (Smaller Tablets) */

@media only screen and (max-width: 48em) {
    html {
        font-size: 37.5%; /* 6px */
    }
    .row {
        padding: 0 var(--spacing-10);
    }
}

@media only screen and (max-width: 30em) {
    .row {
        padding: 0 var(--spacing-9);
    }

    section,
    footer {
        padding: var(--spacing-12) 0;
    }
    /* ---------- Typography ---------- */

    .heading-1 {
        font-size: var(--font-size-11);
        line-height: var(--line-height-11);
    }

    h2 {
        font-size: var(--font-size-10);
        line-height: var(--line-height-10);
    }

    /* ---------- Header ---------- */

    .header__buttons {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -ms-flex-direction: column;
        flex-direction: column;
        row-gap: var(--spacing-7);
    }
}

